<resources xmlns:https="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">The Mystery Called Life</string>
    <string name="community" tools:ignore="DuplicateDefinition">community</string>
    <string name="the_mystery_called_life">The Mystery Called Life</string>
    <string name="intro_text">introtext</string>
    <string name="community2">community2</string>
    <string name="community3">community3</string>
    <string name="community1">community1</string>
    <string name="we_often_question_ourselves_what_our_lives_are_really_about_and_as_we_go_on_with_this_journey_of_life_we_end_up_succumbing_to_different_circumstances_that_shape_our_thoughts_feelings_and_actions_sometimes_to_better_understand_ourselves_we_need_a_guiding_hand">We often question ourselves what our lives are really about and as we go on with this journey of life, we end up succumbing to different circumstances that shape our thoughts, feelings and actions. Sometimes to better understand ourselves, we need a guiding hand.</string>
    <string name="proceed">Proceed</string>
    <string name="community4">community4</string>
    <string name="community5">community5</string>
    <string name="need_help_with_a_situation_you_are_facing">Need help with a situation you are facing?</string>
    <string name="need_some_positive_motivation">Need some positive motivation?</string>
    <string name="feeling">feeling</string>
    <string name="depressed">Depressed?</string>
    <string name="discouraged">Discouraged?</string>
    <string name="giving_up">Giving up?</string>
    <string name="feeling_like_you_don_t_belong">Feeling like you don\'t belong?</string>
    <string name="feeling_useless">Feeling useless?</string>
    <string name="self_doubt">Self-doubt?</string>
    <string name="vengeful_betrayed_angry">Vengeful, Betrayed, Angry?</string>
    <string name="fearful">Fearful?</string>
    <string name="lonely">Lonely?</string>
    <string name="overwhelmed">Overwhelmed/Stressed?</string>
    <string name="jealousy">Jealous?</string>
    <string name="depression">depression</string>
    <string name="this_is_a_state_that_keeps_us_in_a_low_mood_and_can_cause_changes_in_our_thoughts_behaviour_motivation_and_sense_of_well_being">This is a state that keeps us in a low mood and can cause changes in our thoughts, behaviour, motivation and sense of well-being.</string>
    <string name="know_that_you_are_not_alone_in_this_fight_because_it_is_possible_to_be_free_from_depression">Know that you are not alone in this fight because it is possible to be free from depression.</string>
    <string name="remember_that_you_are_loved_and_cared_for_whether_it_s_your_family_relatives_or_even_friends_even_if_you_receive_that_love_from_one_person">Remember that you are loved and cared for, whether it’s your family, relatives or even friends, even if you receive that love from one person.</string>
    <string name="though_it_takes_courage_its_good_to_open_up_to_people_you_know_you_can_trust_sometimes_this_may_come_naturally_and_eventually_you_will_realize_that_you_have_overcome_depression_even_if_it_may_take_a_while">Though it takes courage, its good to open up to people you know you can trust. Sometimes this may come naturally and eventually you will realize that you have overcome depression even if it may take a while.</string>
    <string name="and_once_you_are_able_to_do_this_you_can_connect_with_others_dealing_with_the_same_it_helps_most_of_the_time">And once you are able to do this, you can connect with others dealing with the same. It helps most of the time.</string>
    <string name="there_is_no_need_to_store_up_feelings_of_depression_within_you_rise_up_today_and_engage_yourself_appropriately_in_battling_it">There is no need to store up feelings of depression within you. Rise up today and engage yourself appropriately in battling it.</string>
    <string name="discouragement">discouragement</string>
    <string name="sometimes_we_feel_that_nothing_is_right_and_won_t_get_any_better_these_are_the_moments_we_feel_the_strain_of_difficult_times_it_is_also_a_time_that_we_become_uncertain_of_our_future">Sometimes we feel that nothing is right and won’t get any better. These are the moments we feel the strain of difficult times. It is also a time that we become uncertain of our future.</string>
    <string name="it_is_normal_to_feel_discouraged_but_that_doesn_t_mean_you_have_to_stay_in_this_state_for_long">It is normal to feel discouraged but that doesn’t mean you have to stay in this state for long.</string>
    <string name="feeling_discouraged_tends_to_make_us_forget_that_we_still_have_the_support_of_our_friends_family_and_even_a_higher_power_god">Feeling discouraged tends to make us forget that we still have the support of our friends, family and even a Higher Power(God).</string>
    <string name="sometimes_it_is_better_to_reach_out_to_them_for_they_could_be_a_source_of_renewed_strength_and_encouragement">Sometimes it is better to reach out to them for they could be a source of renewed strength and encouragement.</string>
    <string name="helping">helping</string>
    <string name="motivating">motivating</string>
    <string name="linktodepression">
        <a href="https://www.youtube.com/watch?v=Rv9SwZWVkOs">Conquering depression:How i became my own hero</a>
    </string>
    <string name="you_can_click_on_the_youtube_links_below">You can click on the youtube links below:</string>
    <string name="linktodiscouraged">
        <a href="https://www.youtube.com/watch?v=V3EucbqWS64">Watch this whenever you feel discouraged in life</a>
    </string>
    <string name="linktodiscouraged2">
        <a href="https://www.youtube.com/watch?v=aXSrSwKTbtU">Feeling discouraged?</a>
    </string>
    <string name="given_up">given _up</string>
    <string name="linktogiving_up">
        <a href="https://www.youtube.com/watch?v=rwC3iruYlhQ">When you feel like giving up </a>
    </string>
    <string name="there_are_certain_things_in_life_that_are_out_of_our_control_because_of_this_we_carry_two_choices_either_to_give_up_or_to_keep_going">There are certain things in life that are out of our control. Because of this, we carry two choices- either to give up or to keep going.</string>
    <string name="remember_it_s_not_the_end_the_fact_that_you_are_still_around_alive_should_be_able_to_give_you_a_reason_to_get_up_and_keep_going">Remember it’s not the end. The fact that you are still around- alive- should be able to give you a reason to get up and keep going.</string>
    <string name="many_who_are_successful_today_failed_so_many_times_and_were_countlessly_on_the_verge_of_giving_up_however_they_didn_t_get_stopped_by_the_things_they_couldn_t_control_and_kept_going">Many who are successful today failed so many times and were countlessly on the verge of giving up. However, they didn’t get stopped by the things they couldn’t control and kept going.</string>
    <string name="giving_up_is_a_wall_that_we_must_break_through_but_to_do_that_we_must_acknowledge_that_we_are_not_perfect_and_that_we_are_alive_and_can_still_do_so_much_more">Giving up is a wall that we must break through. But to do that, we must acknowledge that we are not perfect and that we are alive and can still do so much more.</string>
    <string name="but_because_of_how_these_certain_things_whether_it_s_a_task_that_was_meant_to_be_accomplished_or_the_loss_of_something_or_someone_can_be_overwhelming_we_often_give_up">But because of how these certain things, whether it’s a task that was meant to be accomplished or the loss of something or someone, can be overwhelming, we often give up.</string>
    <string name="rejection">rejection</string>
    <string name="we_often_spend_our_time_with_our_friends_and_family_and_do_things_together_these_moments_add_value_to_our_lives_however_there_are_those_times_we_feel_like_we_don_t_belong">We often spend our time with our friends and family and do things together. These moments add value to our lives. However, there are those times we feel like we don’t belong.</string>
    <string name="most_of_us_try_to_fit_in_and_when_we_don_t_succeed_in_this_we_feel_it_s_not_ok">Most of us try to fit in and when we don’t succeed in this, we feel it’s not OK.</string>
    <string name="as_a_result_we_try_changing_who_we_are_to_become_copies_of_others_and_indulge_in_things_we_really_don_t_want">As a result, we try changing who we are to become copies of others and indulge in things we really don’t want.</string>
    <string name="if_you_don_t_fit_in_it_doesn_t_matter_because_being_different_isn_t_a_bad_thing">If you don’t fit in, it doesn’t matter because being different isn’t a bad thing.</string>
    <string name="just_create_your_own_path_where_you_do_what_you_love_because_by_doing_this_you_will_also_set_a_path_for_others_who_find_themselves_in_the_same_situation_but_are_yet_to_build_their_confidence_in_order_to_create_their_own_path">Just create your own path where you do what you love because by doing this you will also set a path for others who find themselves in the same situation but are yet to build their confidence in order to create their own path.</string>
    <string name="linktorejected">
    <a href="https://www.youtube.com/watch?v=9v5TMxekoTg">Ever feel like you do not belong? </a>
    </string>
    <string name="selfdoubt">selfdoubt</string>
    <string name="jealous">jealous</string>
    <string name="linktojealousy">
    <a href="https://www.youtube.com/watch?v=1rcqwRgVvvw">Dealing with jealousy </a>
    </string>
    <string name="linktojealousy2">
    <a href="https://www.youtube.com/watch?v=ouZtOA2obRw">The secret of slaying envy and jealousy </a>
    </string>
    <string name="sometimes_we_end_up_feeling_insecure_around_others_and_develop_a_first_person_emotion_jealousy">Sometimes we end up feeling insecure around others and develop a first-person emotion- jealousy.</string>
    <string name="jealousy_hinders_our_ability_to_empathise_with_others_and_gets_us_distracted_most_of_the_time_with_the_things_we_desire_the_most">Jealousy hinders our ability to empathise with others and gets us distracted most of the time with the things we desire the most.</string>
    <string name="at_this_state_we_tend_to_think_a_lot_about_ourselves_so_we_have_to_learn_how_to_deal_with_it">At this state, we tend to think a lot about ourselves so we have to learn how to deal with it.</string>
    <string name="it_is_indeed_normal_to_feel_jealous_towards_others_but_don_t_let_it_control_you">It is indeed normal to feel jealous towards others but don’t let it control you.</string>
    <string name="in_order_to_avoid_the_clutches_of_jealousy_you_first_need_to_acknowledge_and_accept_that_you_are_jealous">In order to avoid the clutches of jealousy, you first need to acknowledge and accept that you are jealous.</string>
    <string name="if_possible_communicate_with_the_person_you_felt_jealous_towards_tell_them_how_you_feel_show_some_degree_of_honesty_and_apologize_where_you_feel_you_are_wronged_them">If possible, communicate with the person you felt jealous towards. Tell them how you feel. Show some degree of honesty and apologize where you feel you are wronged them.</string>
    <string name="motivation">motivation</string>
    <string name="happiness">Happiness</string>
    <string name="goals">Goals</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="determination">Determination</string>
    <string name="being_you">Being you</string>
    <string name="believing">Believing</string>
    <string name="change">Change</string>
    <string name="purpose">Purpose</string>
    <string name="friends">Friends</string>
    <string name="truth">Truth</string>
    <string name="banner_unit_ad">ca-app-pub-6654711919175662/9086540037</string>
    <string name="ads_by_google">Ads by Google</string>
    <string name="share">share</string>
</resources>