<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".motivation">

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="95dp"
        android:layout_height="136dp"
        android:layout_marginStart="83dp"
        android:layout_marginLeft="83dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="152dp"
        android:contentDescription="@string/community3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scrollView15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/community1"
        tools:ignore="UnknownId" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="335dp"
        android:layout_height="115dp"
        android:layout_marginStart="241dp"
        android:layout_marginLeft="241dp"
        android:layout_marginEnd="240dp"
        android:layout_marginRight="240dp"
        android:contentDescription="@string/motivation"
        app:layout_constraintBottom_toTopOf="@+id/scrollView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/motivation" />

    <ScrollView
        android:id="@+id/scrollView15"
        android:layout_width="381dp"
        android:layout_height="288dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView32"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button26"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_button"
                android:text="@string/happiness" />

            <Button
                android:id="@+id/button25"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_button"
                android:text="@string/goals" />

            <Button
                android:id="@+id/button24"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_button"
                android:text="@string/success" />

            <Button
                android:id="@+id/button23"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_button"
                android:text="@string/failure" />

            <Button
                android:id="@+id/button22"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_button"
                android:text="@string/determination" />

            <Button
                android:id="@+id/button21"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_button"
                android:text="@string/being_you" />

            <Button
                android:id="@+id/button20"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_button"
                android:text="@string/believing" />

            <Button
                android:id="@+id/button19"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_button"
                android:text="@string/change" />

            <Button
                android:id="@+id/button18"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_button"
                android:text="@string/purpose" />

            <Button
                android:id="@+id/button17"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_button"
                android:text="@string/friends" />

            <Button
                android:id="@+id/button12"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_button"
                android:text="@string/truth" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>