<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".menu">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="127dp"
        android:layout_height="75dp"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:layout_marginBottom="140dp"
        android:contentDescription="@string/community4"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/community2" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="320dp"
        android:layout_height="49dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/ads_by_google"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_unit_ad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.641" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="183dp"
        android:layout_height="45dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:contentDescription="@string/community5"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button16"
        app:srcCompat="@drawable/community1"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/button16"
        android:layout_width="78dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:background="@drawable/custom_button2"
        android:text="@string/share"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="210dp"
        android:layout_height="64dp"
        android:background="@drawable/custom_button"
        android:text="@string/need_some_positive_motivation"
        tools:layout_editor_absoluteX="498dp"
        tools:layout_editor_absoluteY="168dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="222dp"
        android:layout_height="57dp"
        android:background="@drawable/custom_button"
        android:text="@string/need_help_with_a_situation_you_are_facing"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="174dp" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="187dp"
        android:layout_height="69dp"
        android:layout_marginStart="134dp"
        android:layout_marginLeft="134dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:contentDescription="@string/helping"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/helping" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="187dp"
        android:layout_height="69dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        android:contentDescription="@string/motivating"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:srcCompat="@drawable/motivated" />

</androidx.constraintlayout.widget.ConstraintLayout>