<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".jealousy">

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/you_can_click_on_the_youtube_links_below"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView43"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView26" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginEnd="230dp"
        android:layout_marginRight="230dp"
        android:text="@string/linktojealousy"
        android:textColor="#2196F3"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView62"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="95dp"
        android:layout_height="136dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:contentDescription="@string/community3"
        app:layout_constraintBottom_toTopOf="@+id/imageView26"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/community1"
        tools:ignore="UnknownId" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="252dp"
        android:layout_height="75dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:contentDescription="@string/jealous"
        app:layout_constraintBottom_toTopOf="@+id/textView44"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23"
        app:srcCompat="@drawable/jealousy" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="370dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView44"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView55"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/sometimes_we_end_up_feeling_insecure_around_others_and_develop_a_first_person_emotion_jealousy"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView56"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/jealousy_hinders_our_ability_to_empathise_with_others_and_gets_us_distracted_most_of_the_time_with_the_things_we_desire_the_most"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView57"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/at_this_state_we_tend_to_think_a_lot_about_ourselves_so_we_have_to_learn_how_to_deal_with_it"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView58"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/it_is_indeed_normal_to_feel_jealous_towards_others_but_don_t_let_it_control_you"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView59"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/in_order_to_avoid_the_clutches_of_jealousy_you_first_need_to_acknowledge_and_accept_that_you_are_jealous"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/if_possible_communicate_with_the_person_you_felt_jealous_towards_tell_them_how_you_feel_show_some_degree_of_honesty_and_apologize_where_you_feel_you_are_wronged_them"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="8dp"
        android:text="@string/linktojealousy2"
        android:textColor="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />
</androidx.constraintlayout.widget.ConstraintLayout>